welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
	if ((Math.abs(10 - a))<(Math.abs(10 - b))) {a} else {
		if ((Math.abs(10 - b))<(Math.abs(10 - a))) {b} else {
			if ((Math.abs(10 - a))==(Math.abs(10 - b))) {0} 
		}
	}
}
